confused about a few things

--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Table for Client</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
 <h2>I'm learning XML!</h2>
+<!--TODO: table created using XML does not become styled correctly. I think it's because the user agent style sheet does not get applied. -->
+<div id="target" class="container"></div>
+<div id="not-target" class="container">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+        </tr>
+        <tr>
+            <td>Mary</td>
+            <td>Moe</td>
+            <td>mary@example.com</td>
+        </tr>
+        <tr>
+            <td>July</td>
+            <td>Dooley</td>
+            <td>july@example.com</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
